ao-worker.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: worker
  name: worker
  namespace: cabot
spec:
  replicas: 2
  template:
    metadata:
      labels:
        service: worker
    spec:
      containers:
      - args:
        - celery
        - worker
        - -A
        - cabot
        image: cabotapp/cabot:0.11.12
        name: worker
      restartPolicy: Always
