ao-postgres.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
  namespace: cabot
  labels:
    service: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: postgres
    spec:
      containers:
      - image: postgres:9.6-alpine
        name: postgres
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: data
      restartPolicy: Always
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cabot
spec:
  ports:
  - name: http-cabot
    port: 5432
  selector:
    service: postgres
