ao-web.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: web
  name: web
  namespace: cabot
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        service: web
    spec:
      containers:
      - args:
        - sh
        - -c
        - cabot migrate && gunicorn cabot.wsgi:application -b 0.0.0.0:5000 --workers=5
        image: cabotapp/cabot:0.11.12
        name: web
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: cabot
spec:
  ports:
  - name: http
    port: 5000
  selector:
    service: web
  type: NodePort
