ao-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: cabot-ingress
  namespace: cabot
spec:
  rules:
  - host: ao-cabot.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 5000
        path: /
  tls:
  - hosts:
    - ao-cabot.eastus.cloudapp.azure.com
    secretName: cabot-tls
